# Health_Project_Remastered

./: .gitignore  LICENSE  README.md  base58_encoder.rs  docker-compose.yml
backend/: .gitignore  Cargo.toml  Dockerfile  Shuttle.toml  build.rs  env.example  secrets.toml  shuttle.toml
backend/.shuttle/: config.toml
backend/src/: audit_log.rs  auditing.rs  auth.rs  auth_plus.rs  config.rs  database.rs  did.rs  fhir.rs  handlers.rs  hedera.rs  main.rs  models.rs  services.rs  state.rs  utils.rs
backend/src/api/: handlers.rs  mod.rs
backend/src/api/middleware/: auth.rs  jwt_auth.rs
backend/src/auditing/: mod.rs
backend/src/auth/: auth_plus.rs  user_roles.rs
backend/src/models/: mod.rs
backend/src/services/: auth.rs  did.rs  email.rs  encounter.rs  fhir.rs  gemini.rs  ipfs.rs  mod.rs  patient.rs  twilio.rs  vc.rs
backend/src/templates/: Verification-email.html
backend/src/tests/: auth_handlers.rs  mod.rs
backend/srcs/tests/: helpers.rs
docs/: API.md  ARCHITECTURE.md  FHIR_SCHEMAS.md  SETUP.md
scripts/: deploy.sh  mongo-init.js  wait-for-mongo.sh  wait-for-services.sh
