[package]
name = "healthcare-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum-server = { version = "0.6.0", features = ["tls-rustls"], optional = true }
# Web framework
axum = { version = "0.7", features = ["macros", "tracing"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
mongodb = "2.8"
bson = "2.8"

# Blockchain
hedera = "0.33.0"
# IPFS client (using HTTP client for now)
# ipfs-api = "0.1"  # This crate doesn't exist yet

# DID and crypto (using basic crypto for now)
# did-key = "0.1"  # This crate doesn't exist yet
ed25519-dalek = "2.0"
sha2 = "0.10"
base64 = "0.21"

# HTTP client
reqwest = { version = "0.11", features = ["json", "multipart"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
config = "0.14"
dotenv = "0.15"

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Validation
validator = { version = "0.16", features = ["derive"] }

# JWT for authentication
jsonwebtoken = "9.2"
aes-gcm = "0.10.3"
hex = "0.4"

# Password hashing
argon2 = "0.5"

# Logging
log = "0.4"

# Additional dependencies
bs58 = "0.5"
rand = "0.8"
regex = "1.10"
futures-util = "0.3"
rs_merkle = "1.2.1"
blake3 = "1.5.0"
lettre = { version = "0.11", features = ["tokio1-native-tls"] }
google-jwt-signin = "0.5.4"
# twilio = "0.1.0"
tera = "1.20.1"
lazy_static = "1.5.0"

[dev-dependencies]
mockall = "0.11.0"

[features]
test = []
tls = ["dep:axum-server"]
